--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width,initial-sacle=1.0">
-<title>无标题文档</title>
+<title>队不队组时光-简单的移动名片</title>
 <link href="css/base.css" rel="stylesheet" type="text/css" />
 </head>
 
